# LAN_transmit

./: CMakeLists.txt  README.md  main.cpp
Header/: Definitions.h  Transmitter_client_TCP.h  Transmitter_server_TCP.h
Resource/: Export.cpp  Transmitter_client_TCP.cpp  Transmitter_server_TCP.cpp
